# OpenWeedLocator

./: .gitignore  AGENTS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  OwlGPS.py  PLAN.md  README.md  algorithms.py  button_inputs.py  environment.yml  focus_owl.sh  gps_tools.py  greenonbrown.py  greenongreen.py  image_sampler.py  logger.py  non_rpi_requirements.txt  owl.py  owl_boot.sh  owl_boot_wrapper.sh  owl_dashboard.py  owl_setup.sh  pyproject.toml  pytest.ini  relay_control.py  requirements-gog.txt  requirements.txt  test_owlgps.py  update_owl.sh  version.py  video_analysis.py
.github/: FUNDING.yml
3D Models/: Enclosure - cable gland.stl  Enclosure - single connector.stl  HQ camera mount.stl  PiCamera v2 mount.stl  Relay control board mount.stl  Solenoid mount - back.stl  Solenoid mount - mid.stl  Tall enclosure base - cable glands.stl  Tall enclosure base - single connector.stl  Tall enclosure cover.stl  Voltage regulator mount.stl
Interface/: Noderedmqttbroker  Readme.md  Sectioncontrol.py  Slaves  Thingstodo  commandinterface.py
agent/: README.md  __init__.py  engine.py  llm_provider.py  tool_registry.py  widget_manager.py
benchmarks/: 2026-02-09_baseline_pre_gog_rewrite.json  2026-02-09_post_gog_rewrite.json  2026-02-10_baseline_pre_gog_rewrite.json  2026-02-10_post_gog_rewrite.json  2026-02-11_baseline_pre_gog_rewrite.json  2026-02-11_post_gog_rewrite.json  2026-02-12_baseline_pre_gog_rewrite.json  bench_actuation_scaling.py  bench_exhsv_hotpath.py  bench_hybrid_parallel.py  bench_tracker.py  plot_benchmarks.py  v1_vs_current.py
config/: CONTROLLER.ini  CONTROLLER_TEMPLATE.ini  DAY_SENSITIVITY_1.ini  DAY_SENSITIVITY_2.ini  DAY_SENSITIVITY_3.ini  GENERAL_CONFIG.ini  README.md  TEST_GOB.ini  (+2 more)
(+260 files in other folders)
